add route /profile/update/{user_id}
